[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Game/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://scenes/Game/Player/attack_state.gd" type="Script" id=3]
[ext_resource path="res://scenes/Game/Player/idle_state.gd" type="Script" id=4]
[ext_resource path="res://scenes/Game/Player/damage_state.gd" type="Script" id=5]
[ext_resource path="res://resources/images/adventurer_tilesheet.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 114, 76, 106 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 160, 114, 76, 106 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 400, 114, 76, 106 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 114, 76, 106 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 4, 76, 106 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 4, 76, 106 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 80, 4, 76, 106 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 114, 76, 106 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 80, 114, 76, 106 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FootRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 30 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
state = NodePath("idle")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="damage" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="visual" type="Node2D" parent="."]

[node name="direction" type="Node2D" parent="visual"]
unique_name_in_owner = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="visual/direction"]
unique_name_in_owner = true
position = Vector2( -1, -4 )
scale = Vector2( 0.447368, 0.447369 )
frames = SubResource( 7 )
animation = "idle"
playing = true

[connection signal="on_state_changed" from="StateMachine" to="." method="_on_StateMachine_on_state_changed"]
